Nakódování dle vzoru, problém s tlačítky FB a TW, dotaz bude vznesen na úterní konzultaci

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Profil: Jana Czechita</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
@@ -34,6 +40,13 @@
 				--><li class="twitter"><a href="#">Twitter</a></li>
 			</ul>
 
+		</div>
+
+
+		<div class="zadani">
+			<p>V zadání není uvedeno, jak je celý rámeček s profilem široký - je to 250px (nebo 300px, když se ti to bude líbit víc).
+				Padding uvnitř obsahového boxu s textem je je 20px.</p>
+			<img src="/zadani-ukolu.jpg" alt="Zadání úkolu">
 		</div>
 
 	</body>
